--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-a11y-select": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1"
   },
