--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-a11y-select": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.12",
